--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ ex_01/glwidget.cc
 ex_01/Makefile
 ex_01/Makefile.Debug
 ex_01/Makefile.Release
-ex_01/release/ex_01.exe
-ex_01/release/glwidget.o
-ex_01/release/main_qt_gl.o
-ex_01/release/qrc_resource.cpp
-ex_01/release/qrc_resource.o
+ex_01/release/
+
 ex_02/Makefile
+ex_02/.qmake.stash
+ex_02/Qt_GL/Makefile
+ex_02/Qt_GL/Makefile.Debug
+ex_02/Qt_GL/Makefile.Release
+ex_02/Qt_GL/release/
+ex_02/text/Makefile
+ex_02/text/Makefile.Debug
+ex_02/text/Makefile.Release
+ex_02/text/release/
