--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ ex_02/text/Makefile
 ex_02/text/Makefile.Debug
 ex_02/text/Makefile.Release
 ex_02/text/release/
+ex_03/.qmake.stash
+ex_03/Makefile
+ex_03/Qt_GL/Makefile
+ex_03/Qt_GL/Makefile.Debug
+ex_03/Qt_GL/Makefile.Release
+ex_03/Qt_GL/release/
+ex_03/text/Makefile
+ex_03/text/Makefile.Debug
+ex_03/text/Makefile.Release
+ex_03/text/release/
