--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,23 @@ ex_04/Qt_GL/Makefile
 ex_04/Qt_GL/Makefile.Debug
 ex_04/Qt_GL/Makefile.Release
 ex_04/Qt_GL/release/
+ex_05/.qmake.stash
+ex_05/Makefile
+ex_05/general/contenu.o
+ex_05/general/libgeneral.a
+ex_05/general/Makefile
+ex_05/Qt_GL/Makefile
+ex_05/Qt_GL/Makefile.Debug
+ex_05/Qt_GL/Makefile.Release
+ex_05/Qt_GL/release/ex_05_gl.exe
+ex_05/Qt_GL/release/glwidget.o
+ex_05/Qt_GL/release/main_qt_gl.o
+ex_05/Qt_GL/release/qrc_resource.cpp
+ex_05/Qt_GL/release/qrc_resource.o
+ex_05/Qt_GL/release/vue_opengl.o
+ex_05/text/Makefile
+ex_05/text/Makefile.Debug
+ex_05/text/Makefile.Release
+ex_05/text/release/ex_05_text.exe
+ex_05/text/release/main_text.o
+ex_05/text/release/text_viewer.o
